--- a/Platzi_Data/ETL/extract/config.yaml
+++ b/Platzi_Data/ETL/extract/config.yaml
@@ -10,6 +10,11 @@ news_sites:
     queries:
       homepage_article_links: '.articulo-titulo a'
       article_body: '.articulo-cuerpo'
-      article_title: '.articulo-titulo'
-
+      article_title: '.articulo-titulo' 
+  washingtonpost:
+    url: https://www.washingtonpost.com
+    queries:
+      homepage_article_links: '.headline a'
+      article_body: '.topper-headline h1'
+      article_title: 'article.paywall'
 
